SERVER-72495 Return warnings about CodeWScope correctly in checkBSONConformance mode for validate